fixing orders table misalignment

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -9151,7 +9151,7 @@ div.header-container.main {
 
                 table {
 
-                    width: 100%;
+                    width: 100% !important;
                     margin: 0 auto;
 
                     tr.header {
